--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl extension Alien::OTR.
 
 {{$NEXT}}
+    Use latest devel branch of libotr.
+    Add patch to free memory of context->context_priv.
 
 4.0.0.0 2014-02-04 00:24:20
 	Initial version.
