--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Alien::OTR.
 
 {{$NEXT}}
+    Provide libotr v4.1.1
 
 4.1.0.0 2014-11-19 00:29:45
     Provide libotr 4.1.0.
